--- a/package.json
+++ b/package.json
@@ -6,19 +6,28 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db.start": "docker-compose up",
+    "db.stop": "docker-compose down"
   },
   "dependencies": {
+    "@auth/core": "^0.18.4",
+    "@auth/prisma-adapter": "^1.0.9",
+    "@prisma/client": "^5.6.0",
+    "crypto-js": "^4.2.0",
+    "next": "14.0.3",
+    "next-auth": "^5.0.0-beta.4",
+    "prisma": "^5.6.0",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.3"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/crypto-js": "^4.2.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.0.3"
+    "eslint-config-next": "14.0.3",
+    "typescript": "^5"
   }
 }
