--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     environment:
       POSTGRES_USER: next
       POSTGRES_PASSWORD: secret
-      POSTGRES_DB: next
+      POSTGRES_DB: turbo
     ports:
       - "5433:5432"
     volumes:
