--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
-  "name": "next-auth",
-  "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "db.start": "docker-compose up",
-    "db.stop": "docker-compose down"
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
+  "prisma": {
+    "schema": "packages/database/prisma/schema.prisma",
+    "seed": "tsx packages/database/src/seed.ts"
   },
-  "dependencies": {
-    "@auth/core": "^0.18.4",
-    "@auth/prisma-adapter": "^1.0.9",
-    "@prisma/client": "^5.6.0",
-    "crypto-js": "^4.2.0",
-    "next": "14.0.3",
-    "next-auth": "^5.0.0-beta.4",
-    "prisma": "^5.6.0",
-    "react": "^18",
-    "react-dom": "^18"
+  "scripts": {
+    "build": "turbo run build",
+    "db:migrate:deploy": "turbo run db:migrate:deploy",
+    "db:migrate:dev": "turbo run db:migrate:dev",
+    "db:push": "turbo run db:push",
+    "db:seed": "turbo run db:seed",
+    "db.start": "docker-compose up -d",
+    "db.stop": "docker-compose down",
+    "dev": "turbo run dev",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "generate": "turbo run generate",
+    "lint": "turbo run lint"
   },
   "devDependencies": {
-    "@types/crypto-js": "^4.2.1",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.3",
-    "typescript": "^5"
-  }
+    "@repo/eslint-config": "*",
+    "prettier": "^3.1.0",
+    "tsx": "^4.6.2",
+    "turbo": "^1.11.0"
+  },
+  "engines": {
+    "node": ">=18"
+  },
+  "packageManager": "yarn@1.22.19"
 }
