--- a/packages/config-eslint/package.json
+++ b/packages/config-eslint/package.json
@@ -13,6 +13,7 @@
     "eslint-plugin-only-warn": "^1.1.0",
     "@typescript-eslint/parser": "^6.13.2",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@next/eslint-plugin-next": "^14.0.3",
     "typescript": "^5.3.2"
   }
 }
