--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -26,6 +26,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.3",
     "@types/cors": "^2.8.17",
+    "dotenv": "16.3.1",
     "esbuild": "^0.19.8",
     "eslint": "^8.55.0"
   }
