--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "^18.2.17",
     "@repo/database": "*",
     "eslint": "^8.55.0",
+    "sass": "1.69.5",
     "typescript": "^5.3.2"
   }
 }
