update authentication and prisma

--- a/apps/api/.env
+++ b/apps/api/.env
@@ -1,2 +1,4 @@
 AUTH0_AUDIENCE='https://next-auth-fullstack-uw7g4.ondigitalocean.app'
 AUTH0_ISSUER_BASE_URL='https://jr-freelance.eu.auth0.com'
+
+NODE_ENV='development'
