--- a/packages/database/.env
+++ b/packages/database/.env
@@ -1,1 +1,6 @@
-../../.env
+NODE_ENV=development
+
+DATABASE_URL="postgresql://next:secret@localhost:5433/turbo?schema=public"
+API_PORT=4000
+CORS_ORIGIN="https://localhost:3000"
+JWT_SECRET="top-secret"
