--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,29 +5,46 @@
   "license": "MIT",
   "scripts": {
     "build": "esbuild --bundle --platform=node --target=node14 --outdir=dist src/server.ts",
+    "clean": "rimraf dist node_modules .turbo",
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
     "start": "node dist/server.js",
     "lint": "eslint --ext .ts src",
     "lint:fix": "eslint --fix --ext .ts src"
   },
   "dependencies": {
+    "bcryptjs": "2.4.3",
     "cors": "^2.8.5",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
-    "express-oauth2-jwt-bearer": "^1.6.0",
+    "express-session": "^1.17.3",
     "helmet": "^7.1.0",
+    "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.2",
+    "passport": "^0.7.0",
+    "passport-local": "1.0.0",
+    "passport-jwt": "^4.0.1",
+    "rand-token": "^1.0.1",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@repo/database": "*",
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.10.3",
+    "@types/bcryptjs": "2.4.6",
+    "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/express-session": "^1.17.10",
+    "@types/node": "^20.10.3",
+    "@types/passport": "^1.0.16",
+    "@types/passport-local": "^1.0.38",
+    "@types/passport-jwt": "^3.0.13",
+    "@types/morgan": "^1.9.9",
     "dotenv": "16.3.1",
     "esbuild": "^0.19.8",
-    "eslint": "^8.55.0"
+    "eslint": "^8.55.0",
+    "rimraf": "^5.0.5"
   }
 }
