--- a/packages/config-eslint/package.json
+++ b/packages/config-eslint/package.json
@@ -6,6 +6,9 @@
     "library.js",
     "next.js"
   ],
+  "scripts": {
+    "clean": "rimraf node_modules"
+  },
   "devDependencies": {
     "@vercel/style-guide": "^5.1.0",
     "eslint-config-turbo": "^1.11.0",
@@ -14,6 +17,7 @@
     "@typescript-eslint/parser": "^6.13.2",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@next/eslint-plugin-next": "^14.0.3",
+    "rimraf": "^5.0.5",
     "typescript": "^5.3.2"
   }
 }
