--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -1,33 +1,40 @@
 {
   "name": "@repo/database",
-  "version": "1.0.0",
-  "exports": {
-    ".": "./src/client.ts"
-  },
+  "version": "0.0.0",
+  "license": "MIT",
+  "main": "./dist/index.js",
+  "source": "./src/index.ts",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist/**"
+  ],
   "scripts": {
-    "db:migrate:deploy": "prisma migrate deploy",
-    "db:migrate:dev": "prisma migrate dev",
-    "db:push": "prisma db push",
-    "db:seed": "tsx src/seed.ts",
-    "devvv": "tsup --watch",
+    "build": "tsup",
+    "clean": "rimraf .turbo node_modules dist",
+    "db.generate": "prisma generate",
+    "db.migrate.deploy": "prisma migrate deploy",
+    "db.migrate.dev": "prisma migrate dev",
+    "db.push": "prisma db push",
+    "db.seed": "tsx src/seed.ts",
+    "dev": "tsup --watch",
     "format": "prisma format",
-    "generate": "prisma generate",
-    "lint": "eslint . --max-warnings 0",
-    "prebuild": "npm run generate",
-    "predev": "npm run generate",
+    "lint": "eslint ./src --fix",
     "studio": "prisma studio"
   },
   "dependencies": {
-    "@prisma/client": "^5.7.0"
+    "@prisma/client": "5.7.0"
   },
   "devDependencies": {
+    "@types/node": "20.10.4",
+    "dotenv": "16.3.1",
+    "eslint": "8.55.0",
     "@repo/eslint-config": "*",
-    "eslint": "^8.55.0",
-    "prisma": "^5.7.0",
-    "rimraf": "^5.0.5",
+    "prisma": "5.7.0",
+    "rimraf": "5.0.5",
     "@repo/typescript-config": "*",
-    "tsx": "^4.6.2",
-    "tsup": "^8.0.1",
-    "typescript": "^5.3.2"
+    "tsup": "6.6.3",
+    "tsx": "4.6.2",
+    "typescript": "5.3.3"
   }
 }
